firebase storage and firestore implement

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 
 
 .container{
-    width: 100%;
+    min-width: 100vw;
     height: 100vh;
     background-image: linear-gradient(rgba(0,0,50,0.8),rgba(0,0,50,0.8)), url(../public/background.png) ;
     background-position: center;
